package controller.filter;

/**
 * Created by Catalin on 6/18/2015 .
 */
public interface Filter {
    boolean filterWord(String word);
}
